--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "webpack-dev-server": "^2.1.0-beta"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "bulma": "^0.2.3",
     "cross-env": "^3.1.0",
     "react": "^15.0.1",
